# multimodal-brain-scaling

./: .gitignore  LICENSE  README.md  env.sh  pyproject.toml
aux/: 00_schizophrenia_pipeline_Sophie_2026.md  00_schizophrenia_pipelines_Sophie_2026.md  01_setup.md  02_project_plan_make_compatible_for_auditory_EEG.md  MMN_pipeline_analysis_decisions_notes_062226.md  XX_handover_for_Sophie.md  answers_to_sophies_questions_20260611.txt  encoder_vs_mrtf_plots_organization_summary.md  handoff_24freq_7models_screen.md  handoff_enable_large_wav2vec2_models.md  mmn_criterion_investigation.md  mmn_screening_plan.md  project_plan_20260611.md  project_plan_mmn_updates_20260619.md  results_analysis.md  results_analysis_visualization.md  sophies_questions_20260611.txt  sophies_repository_overview.md
logs/: delta_t_54867238_0.err  delta_t_54867238_0.out  delta_t_54867710_0.err  delta_t_54867710_0.out  delta_t_54867710_1.err  delta_t_54867710_1.out  delta_t_54867710_10.err  delta_t_54867710_10.out  delta_t_54867710_11.err  delta_t_54867710_11.out  delta_t_54867710_12.err  delta_t_54867710_12.out  delta_t_54867710_13.err  delta_t_54867710_13.out  delta_t_54867710_14.err  delta_t_54867710_14.out  delta_t_54867710_15.err  delta_t_54867710_15.out  delta_t_54867710_16.err  delta_t_54867710_16.out  delta_t_54867710_17.err  delta_t_54867710_17.out  delta_t_54867710_18.err  delta_t_54867710_18.out  delta_t_54867710_19.err  delta_t_54867710_19.out  delta_t_54867710_2.err  delta_t_54867710_2.out  delta_t_54867710_3.err  delta_t_54867710_3.out  delta_t_54867710_4.err  delta_t_54867710_4.out  delta_t_54867710_5.err  delta_t_54867710_5.out  delta_t_54867710_6.err  delta_t_54867710_6.out  delta_t_54867710_7.err  delta_t_54867710_7.out  delta_t_54867710_8.err  delta_t_54867710_8.out  (+6 more)
scripts/: 00aa_generate_audio_stimuli.py  _whisper_features.sh  analyze_mmn_criteria.py  analyze_mmn_criteria_s5_s6.py  analyze_mmn_roi_variants.py  analyze_mmn_s7_roi.py  analyze_mmn_screen_24freq.py  build_mmn_criteria_summary_tables.py  build_mmn_results_table.py  diagnose_extra_electrodes.py  diagnose_roi_mapping.py  eeg_mapping_sweep.py  (+51 more)
(+701 files in other folders)
